--- a/public/static/css/connect.css
+++ b/public/static/css/connect.css
@@ -1,1 +1,1 @@
-body{margin:0;padding:0;background-color:#f6f6f6}.box{background-color:#fff;border-radius:8px;padding:16px;width:600px}.centered-box{height:100vh;display:flex;align-items:center;justify-content:center}
+body{background-color:#f5f6fa;font-size:16px;font-family:'Roboto',sans-serif;margin:0;padding:0}h1,h2,h3,h4,h5,ul,html{padding:0;margin:0}.box{background-color:#fff;border-radius:8px;padding:16px;width:600px}.centered-box{height:100vh;display:flex;align-items:center;justify-content:center}
