--- a/public/static/css/connect.styl
+++ b/public/static/css/connect.styl
@@ -1,7 +1,13 @@
 body
+    background-color #f5f6fa
+    font-size 16px
+    font-family 'Roboto', sans-serif;
     margin 0px
     padding 0px
-    background-color #f6f6f6
+
+h1,h2,h3,h4,h5,ul,html
+    padding 0
+    margin 0
 
 .box
     background-color #fff
