[ADD] create basic template of admin dashboard

--- a/public/static/css/admin.styl
+++ b/public/static/css/admin.styl
@@ -11,12 +11,13 @@ h1,h2,h3,h4,h5,ul,body,html
     min-height: 100vh
     overflow: hidden
     .panel
+        float: left
         position: relative
         z-index: 99
         width: 18%
 
-    .nav
-        position: relative
+    .col2
+        float: left
         width: 82%
 
 .sidebar
@@ -49,6 +50,17 @@ h1,h2,h3,h4,h5,ul,body,html
                         color #fff
                 a:hover
                     color: #fff
+
+.navbar
+    background-color: #2caaff
+    a
+        color: #fff
+
+.container-fluid
+    .panel-content
+        background-color: #fff
+        border-bottom 2px solid #2caaff
+
 
 
 
